[gd_scene load_steps=7 format=2]

[ext_resource path="res://font/Awake.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Dialog/menu_section_9patch.png" type="Texture" id=2]
[ext_resource path="res://test_ui/test_menu.gd" type="Script" id=3]
[ext_resource path="res://Dialog/ChoiceButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://test_ui/caret.png" type="Texture" id=5]


[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect"]
pause_mode = 2
margin_left = 71.0
margin_top = 383.0
margin_right = 321.0
margin_bottom = 546.0
texture = ExtResource( 2 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 354.931 ],
"_edit_use_anchors_": false
}
ChoiceButton = ExtResource( 4 )

[node name="PopUp" type="AudioStreamPlayer" parent="."]

[node name="Select" type="AudioStreamPlayer" parent="."]

[node name="ChoicePos" type="Position2D" parent="."]
position = Vector2( 230, 107 )

[node name="Text" type="RichTextLabel" parent="."]
anchor_left = 0.131
anchor_top = 0.254
anchor_right = 0.131
anchor_bottom = 0.331
margin_right = 170.0
margin_bottom = 100.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Who do you want to test?"
text = "Who do you want to test?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="DeclineButton" parent="." instance=ExtResource( 4 )]
margin_left = 230.0
margin_top = 145.0
margin_right = 536.8
margin_bottom = 172.0
focus_next = NodePath("../Buttons")
focus_previous = NodePath("../Buttons")

[node name="Details" type="NinePatchRect" parent="."]
margin_left = 412.157
margin_top = -18.5026
margin_right = 762.157
margin_bottom = 131.497
texture = ExtResource( 2 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Details"]
margin_left = 19.0488
margin_top = 16.6677
margin_right = 281.049
margin_bottom = 122.668
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharName" type="HBoxContainer" parent="Details/VBoxContainer"]
margin_right = 262.0
margin_bottom = 25.0
rect_min_size = Vector2( 40, 25 )

[node name="Label" type="Label" parent="Details/VBoxContainer/CharName"]
margin_top = -1.0
margin_right = 94.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 25 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Full Name:"

[node name="Details" type="Label" parent="Details/VBoxContainer/CharName"]
margin_left = 98.0
margin_top = -1.0
margin_right = 262.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 25 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "jasldfiahnf ;ksldfj"

[node name="Home" type="HBoxContainer" parent="Details/VBoxContainer"]
margin_top = 35.0
margin_right = 262.0
margin_bottom = 57.0

[node name="Label" type="Label" parent="Details/VBoxContainer/Home"]
margin_right = 60.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Home: "

[node name="Details" type="Label" parent="Details/VBoxContainer/Home"]
margin_left = 64.0
margin_right = 84.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1B"

[node name="Work" type="HBoxContainer" parent="Details/VBoxContainer"]
margin_top = 67.0
margin_right = 262.0
margin_bottom = 89.0

[node name="Label" type="Label" parent="Details/VBoxContainer/Work"]
margin_right = 60.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Work: "

[node name="Details" type="Label" parent="Details/VBoxContainer/Work"]
margin_left = 64.0
margin_right = 162.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Factory 2"

[node name="LastTested" type="HBoxContainer" parent="Details/VBoxContainer"]
margin_top = 99.0
margin_right = 262.0
margin_bottom = 121.0

[node name="Label" type="Label" parent="Details/VBoxContainer/LastTested"]
margin_right = 172.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Date last tested: "

[node name="Details" type="Label" parent="Details/VBoxContainer/LastTested"]
margin_left = 176.0
margin_right = 184.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"

[node name="Sprite" type="Sprite" parent="Details"]
position = Vector2( -9.53516, 131.903 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
[connection signal="is_pressed" from="DeclineButton" to="." method="_on_DeclineButton_is_pressed"]
